# ccb-lms

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  jwt_auth.rs
ccb-common/: Cargo.toml
ccb-common/src/: auth.rs  lib.rs
frontend/: index.html
migrations/: 20251212233515_enable_uuid_extension.sql  20251212233516_create_users_table.sql  20251212233517_create_courses_table.sql  20251212233518_create_enrollments_table.sql  20251212233519_add_user_roles.sql
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/course-service/: Cargo.toml  Dockerfile
services/course-service/src/: main.rs
services/enrollment-service/: Cargo.toml  Dockerfile
services/enrollment-service/src/: main.rs
