[workspace]
resolver = "2"
members = [
    "services/auth-service",
    "services/course-service",
    "ccb-common",
    "services/enrollment-service",
    # "services/quiz-service",
]

[workspace.dependencies]
# Lista de dependencias compartidas para todos los servicios
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "types"] }
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
