[workspace]
resolver = "2"
members = [
    "services/auth-service",
    "services/course-service",
    "ccb-common",
    "services/enrollment-service",
    # "services/quiz-service",
]

[workspace.dependencies]
# Lista de dependencias compartidas para todos los servicios
actix-web = "4.8.0"
actix-cors = "0.7.1"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "types"] }
dotenvy = "0.15.7"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
