[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
ccb-common = { path = "../../ccb-common" }
actix-cors = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
env_logger = "0.11"