[package]
name = "enrollment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
ccb-common = { path = "../../ccb-common" }
actix-cors = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
tracing = "0.1"
env_logger = "0.11"
